# dirdiff

./: Cargo.toml  README
doc/: tests
src/: db.rs  dir_csv.rs  docs.rs  main.rs
