[package]
name = "dirdiff"
version = "0.1.0"
authors = ["Andres Osinski <andres.osinski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
hex = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_millis = "0.1.1"
sha-1 = "0.9.1"
walkdir = "2"
