[package]
name = "dirdiff"
version = "0.1.0"
authors = ["Andres Osinski <andres.osinski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.13"
csv = "1.1"
hex = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_millis = "0.1.1"
sha-1 = "0.9.1"
walkdir = "2"

[dependencies.rusqlite]
version = "0.21.0"
features = ["buildtime_bindgen"]
